Fix the HTML serializer to not do fancy linebreaking when "raw" output is requested.  Use this in innerHTML.  Bug 89780, r+sr=peterv